--- a/website_lb3.html
+++ b/website_lb3.html
@@ -20,6 +20,7 @@
                     <li><a href="">support@sofiadoors.com</a></li>
                     <li><a href="">8 (800) 550-81-79</a></li>
                 </ul>
+                <img class="wrapper_menu" src="img/foto.png" alt="">
             </div>
         </div>
     </header>
